# FitAppMobile

./: .firebaserc  .gitignore  App.js  README.md  app.json  babel.config.js  build-android.ps1  eas.json  et --soft 8c41179f8  firebase.json  fitapp.db  gradle-plugin-0.78.0.tgz  h origin main --force  index.js  metro.config.js  package-lock.json  package.json  postinstall.js  react-native-codegen-0.75.5.tgz  react-native.config.js
.github/workflows/: android.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
FitAppReactNative/: package.json
FitAppReactNative/android/: settings.gradle
FitAppReactNative/android/app/: build.gradle
FitAppReactNative/ios/FitAppReactNative/: Info.plist
FitAppReactNative/ios/FitAppReactNative.xcodeproj/: project.pbxproj
android/: boost-url-override.gradle  build.gradle  build_log.txt  dependencies.txt  deps.txt  gradle.properties  key.properties  kotlin_errors.txt  my-release-key.keystore  settings.gradle
android/android/app/: my-release-key.keystore
android/app/: autolinking-fix.gradle  build.gradle  fitapp-release-key.keystore  google-services.json  google-services.json~  my-release-key.keystore  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  override-hermes-dir.cmake
android/fake-hermes-engine/: build.gradle  build.gradle.kts
android/featureflagsjni/: CMakeLists.txt  ReactNativeFeatureFlagsCxxInterop.cpp  build.gradle
android/gradle/: libs.versions.toml
android/tmp_apk/: AndroidManifest.xml  classes10.dex  classes11.dex  classes12.dex  classes13.dex  classes14.dex  classes15.dex  classes16.dex  classes17.dex  classes19.dex  classes2.dex  classes3.dex  classes4.dex  classes5.dex  classes6.dex  classes8.dex  classes9.dex  resources.arsc
android/tmp_apk/assets/: index.android.bundle
android/tmp_apk/res/anim-v21/: m3_side_sheet_enter_from_left.xml  m3_side_sheet_enter_from_right.xml  m3_side_sheet_exit_to_left.xml  m3_side_sheet_exit_to_right.xml
android/tmp_apk/res/animator-v21/: design_appbar_state_list_animator.xml  m3_appbar_state_list_animator.xml
apk_contents_debug/: AndroidManifest.xml  classes10.dex  classes12.dex  classes13.dex  classes14.dex  classes15.dex  classes2.dex  classes3.dex  classes4.dex  classes5.dex  classes6.dex  classes7.dex  classes8.dex  classes9.dex  resources.arsc
apk_contents_debug/res/color/: abc_hint_foreground_material_light.xml
apk_contents_debug/res/drawable/: abc_btn_check_material_anim.xml  abc_ic_ab_back_material.xml  abc_ic_arrow_drop_right_black_24dp.xml  abc_ic_clear_material.xml  abc_ic_go_search_api_material.xml  abc_ic_menu_overflow_material.xml  abc_ic_search_api_material.xml  abc_ic_voice_search_api_material.xml  common_google_signin_btn_text_dark_normal.xml  notification_icon_background.xml  splashscreen.xml  tooltip_frame_dark.xml  tooltip_frame_light.xml
apk_contents_debug/res/drawable-v21/: abc_edit_text_material.xml
apk_contents_debug/res/drawable-watch-v20/: common_google_signin_btn_text_dark_normal.xml  common_google_signin_btn_text_disabled.xml  common_google_signin_btn_text_light_normal.xml
apk_contents_debug/res/layout/: abc_action_bar_title_item.xml  abc_action_mode_close_item_material.xml  abc_activity_chooser_view.xml  abc_activity_chooser_view_list_item.xml  abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_material.xml  abc_alert_dialog_title_material.xml  abc_cascading_menu_item_layout.xml  abc_dialog_title_material.xml  abc_expanded_menu_layout.xml  abc_list_menu_item_layout.xml  abc_list_menu_item_radio.xml  abc_popup_menu_header_item_layout.xml  abc_popup_menu_item_layout.xml  abc_screen_toolbar.xml  abc_search_dropdown_item_icons_2line.xml  abc_search_view.xml  abc_select_dialog_material.xml  abc_tooltip.xml  alert_title_layout.xml  autofill_inline_suggestion.xml  browser_actions_context_menu_page.xml  browser_actions_context_menu_row.xml  custom_dialog.xml  fps_view.xml  ime_secondary_split_test_activity.xml  notification_template_part_chronometer.xml  notification_template_part_time.xml  paused_in_debugger_view.xml  redbox_item_frame.xml  redbox_item_title.xml  redbox_view.xml  select_dialog_item_material.xml  select_dialog_multichoice_material.xml  select_dialog_singlechoice_material.xml  support_simple_spinner_dropdown_item.xml
apk_contents_debug/res/layout-v21/: notification_action.xml  notification_action_tombstone.xml  notification_template_custom_big.xml  notification_template_icon_group.xml
apk_contents_debug/res/layout-v26/: abc_screen_toolbar.xml
apk_contents_debug/res/layout-watch-v20/: abc_alert_dialog_button_bar_material.xml  abc_alert_dialog_title_material.xml
apk_contents_debug/res/mipmap-anydpi-v26/: ic_launcher_round.xml
backend/: app.py  auth.py  init_db.py  models.py  requirements.txt  workout_routes.py
functions/: index.js  package-lock.json  package.json
ios/: Podfile
ios/FitAppReactNative/: AppDelegate.mm  LaunchScreen.storyboard
ios/FitAppReactNativeTests/: FitAppReactNativeTests.m
patches/: react-native+0.74.7.patch  react-native-sqlite-2+3.6.2.patch  react-native-sqlite-storage+6.0.1.patch  react-native-vector-icons+10.3.0.patch
schemas/: schema.json
scripts/: generate-autolinking.js
src/auth/: AuthService.js  LoginScreen.js  RegisterScreen.js  UserModel.js
src/components/: AuthForm.js
src/core/: AssignmentService.js  TimerService.js  WorkoutManager.js  detox.config.js
src/core/services/: AssignmentService.js  ExerciseService.js  TimerService.js  WorkoutManager.js
src/database/: database.js  db.js  initDB.js  schemas.js
src/database/firebase/: firebaseConfig.js  networkConfig.js  useFirebase.js  useNetworkStatus.js
src/database/local/: LocalDB.js  database.js  initDB.js  queries.js
src/database/sync/: OfflineSync.js  syncStrategies.js
src/screens/: ExecuteWorkoutScreen.js  WorkoutScreen.js
src/services/: TimerService.js  firebaseConfig.js
src/sync/: OfflineSync.js
src/utils/: OfflineQueue.js  network.js
tests/: assignment-test.js  db.test.js  sqlite-test.js  testInitDB.js
(+377 files in other folders)
